--- a/zeleniKljucHakaton/ui/Home/HomeViewController.xib
+++ b/zeleniKljucHakaton/ui/Home/HomeViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="greenKeyApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="zeleniKljucHakaton" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="aNK-xX-qmR" id="uZw-JP-K6a"/>
                 <outlet property="scrollView" destination="y9s-T6-hJ8" id="Uj0-jZ-Ia7"/>
@@ -34,7 +34,7 @@
                             <color key="tintColor" red="0.78643521250000004" green="0.86247830299999995" blue="0.27727047040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </tabBar>
                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y9s-T6-hJ8">
-                            <rect key="frame" x="0.0" y="7.5" width="414" height="888.5"/>
+                            <rect key="frame" x="0.0" y="32" width="414" height="864"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ae7-fI-yuw">
                                     <rect key="frame" x="32" y="707.5" width="350" height="45"/>
@@ -226,7 +226,7 @@
                         <constraint firstItem="y9s-T6-hJ8" firstAttribute="leading" secondItem="P0m-Ef-Tb3" secondAttribute="leading" id="FOe-KP-0nb"/>
                         <constraint firstItem="y9s-T6-hJ8" firstAttribute="trailing" secondItem="P0m-Ef-Tb3" secondAttribute="trailing" id="X6A-nC-aBr"/>
                         <constraint firstItem="P0m-Ef-Tb3" firstAttribute="top" secondItem="y9s-T6-hJ8" secondAttribute="bottom" id="ZfW-NE-LXo"/>
-                        <constraint firstItem="y9s-T6-hJ8" firstAttribute="top" secondItem="v8f-99-0Rf" secondAttribute="top" constant="7.5" id="fVM-12-BAM"/>
+                        <constraint firstItem="y9s-T6-hJ8" firstAttribute="top" secondItem="v8f-99-0Rf" secondAttribute="top" constant="32" id="fVM-12-BAM"/>
                         <constraint firstItem="P0m-Ef-Tb3" firstAttribute="leading" secondItem="v8f-99-0Rf" secondAttribute="leading" id="j6U-sI-GZA"/>
                     </constraints>
                 </view>
