--- a/zeleniKljucHakaton/ui/Partners/PartnersCollectionViewCell.xib
+++ b/zeleniKljucHakaton/ui/Partners/PartnersCollectionViewCell.xib
@@ -41,7 +41,7 @@
                                 <buttonConfiguration key="configuration" style="plain" image="chevron.right.circle.fill" catalog="system"/>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.98157619201030921" green="0.98157619201030921" blue="0.98157619201030921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="DzP-Jv-1RX" firstAttribute="top" secondItem="IjW-bS-uJW" secondAttribute="top" constant="12" id="5k0-HH-hxN"/>
                             <constraint firstItem="VrT-JJ-Gyg" firstAttribute="centerX" secondItem="IjW-bS-uJW" secondAttribute="centerX" id="9RT-QD-o8I"/>
