--- a/zeleniKljucHakaton/ui/CategoriesInformations/CategoriesInformationsTableViewCell.xib
+++ b/zeleniKljucHakaton/ui/CategoriesInformations/CategoriesInformationsTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="69" id="KGk-i7-Jjw" customClass="CategoriesInformationsTableViewCell" customModule="greenKeyApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="69" id="KGk-i7-Jjw" customClass="CategoriesInformationsTableViewCell" customModule="zeleniKljucHakaton" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="355" height="69"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -19,17 +19,22 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vwE-Up-qjw">
                         <rect key="frame" x="0.0" y="0.0" width="355" height="69"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCA-fI-E9e">
-                                <rect key="frame" x="154" y="24" width="47" height="21.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iUB-Iq-BFF">
+                                <rect key="frame" x="0.0" y="0.0" width="355" height="69"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="openURL:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="3kH-w0-OuD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.78643521250000004" green="0.86247830299999995" blue="0.27727047040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="LCA-fI-E9e" firstAttribute="centerX" secondItem="vwE-Up-qjw" secondAttribute="centerX" id="iJ1-hh-6mY"/>
-                            <constraint firstItem="LCA-fI-E9e" firstAttribute="centerY" secondItem="vwE-Up-qjw" secondAttribute="centerY" id="xVt-qD-8pj"/>
+                            <constraint firstAttribute="bottom" secondItem="iUB-Iq-BFF" secondAttribute="bottom" id="5Fh-SR-WCm"/>
+                            <constraint firstItem="iUB-Iq-BFF" firstAttribute="leading" secondItem="vwE-Up-qjw" secondAttribute="leading" id="8gO-zy-t75"/>
+                            <constraint firstItem="iUB-Iq-BFF" firstAttribute="top" secondItem="vwE-Up-qjw" secondAttribute="top" id="Ca2-yE-yCQ"/>
+                            <constraint firstAttribute="trailing" secondItem="iUB-Iq-BFF" secondAttribute="trailing" id="kw7-YS-uqI"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -46,6 +51,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="button" destination="iUB-Iq-BFF" id="nN0-9L-cNe"/>
+                <outlet property="cellBackgorund" destination="vwE-Up-qjw" id="t2c-Qh-ldV"/>
+            </connections>
             <point key="canvasLocation" x="157.24637681159422" y="104.79910714285714"/>
         </tableViewCell>
     </objects>
